Add basic app layout

--- a/app/source/renderer/index.html
+++ b/app/source/renderer/index.html
@@ -6,9 +6,21 @@
         <style>
             html {
                 box-sizing: border-box;
+                font-family: Helvetica, Arial, sans-serif;
+                font-size: 14px;
+                height: 100%;
+            }
+            *,
+            *:before,
+            *:after {
+                box-sizing: inherit;
             }
             body {
                 margin: 0;
+                height: 100%;
+            }
+            #root {
+                height: 100%;
             }
         </style>
     </head>
